fix: wrap the no-found message with tag h2 in single product page

--- a/online-store-team/src/components/view/storeView/store.css
+++ b/online-store-team/src/components/view/storeView/store.css
@@ -96,6 +96,7 @@
 */
 
 .no-found {
+  padding-left: 3rem;
   font-size: 3rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
